--- a/languagelearningappversion2/pubspec.yaml
+++ b/languagelearningappversion2/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  animated_splash_screen: ^1.3.0
+  lottie: ^2.2.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
@@ -59,10 +62,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/icons/
+    - assets/images/colors/
+    - assets/images/family_members/
+    - assets/images/numbers/   
+    - assets/images/colors/
+    - assets/images/photos/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
