--- a/languagelearningappversion2/pubspec.yaml
+++ b/languagelearningappversion2/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   animated_splash_screen: ^1.3.0
   lottie: ^2.2.0
   get: ^4.6.5
+  audioplayers: ^4.1.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,9 @@ flutter:
     - assets/images/colors/
     - assets/images/photos/
     - assets/images/animations/
+    - assets/sounds/numbers/
+    - assets/sounds/family_members/
+    - assets/sounds/colors/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
